Improved the appearance of comparing two Trivy scans of the same exact artefact