@@ -44,6 +44,7 @@ body {
     font-family: sans-serif;
     font-size: 0.8em;
     font-weight: 400;
+    hyphens: auto;
 }
 
 h1 {
@@ -69,25 +70,49 @@ table.mainTableVulnerabilities {
     margin-right: auto;
 }
 
-thead.mainTableHeader tr th:nth-child(1)
+table.mainTableVulnerabilities thead tr th:nth-child(1)
 {
-    width: 15%;
+    width: 18%;
 }
 
-thead.mainTableHeader tr th:nth-child(2)
+table.mainTableVulnerabilities thead tr th:nth-child(2)
 {
-    width: 15%;
+    width: 13%;
 }
 
-thead.mainTableHeader tr th:nth-child(3)
+table.mainTableVulnerabilities thead tr th:nth-child(3)
 {
-    width: 25%;
+    width: 24%;
 }
 
-thead.mainTableHeader tr th:nth-child(4)
+table.mainTableVulnerabilities thead tr th:nth-child(4)
 {
     width: 45%;
 }
+
+table.mainTableClosedVulnerabilities {
+    table-layout: fixed;
+    width: 90%;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+table.mainTableClosedVulnerabilities thead tr th:nth-child(1)
+{
+    width: 18%;
+}
+
+table.mainTableClosedVulnerabilities thead tr th:nth-child(2)
+{
+    width: 13%;
+}
+
+table.mainTableClosedVulnerabilities thead tr th:nth-child(3)
+{
+    width: 69%;
+}
+
 
 thead.mainTableHeader {
     background-color: #8d8d8d;
@@ -110,24 +135,28 @@ tbody.mainTableBody tr.mainTableBodyRow:nth-child(odd) {
 
 thead.subTableHeader tr th:nth-child(1)
 {
-    width: 30%;
+    width: 40%;
 }
 
 thead.subTableHeader tr th:nth-child(2)
 {
-    width: 40%;
+    width: 30%;
 }
 
 thead.subTableHeader tr th:nth-child(3)
 {
-    width: 40%;
+    width: 30%;
 }
 
 thead.subTableHeader tr th {
-    padding: 0.5em;
+    padding: 0.2em;
     font-size: 1em;
     page-break-inside: avoid;
     vertical-align: text-top;
+}
+
+tbody.subTableBody tr td {
+    padding: 0.2em;
 }
   
 table.whitelistTableVulnerabilities {
@@ -140,17 +169,17 @@ table.whitelistTableVulnerabilities {
 
 thead.whitelistTableHeader tr th:nth-child(1)
 {
-    width: 15%;
+    width: 18%;
 }
 
 thead.whitelistTableHeader tr th:nth-child(2)
 {
-    width: 15%;
+    width: 13%;
 }
 
 thead.whitelistTableHeader tr th:nth-child(3)
 {
-    width: 20%;
+    width: 19%;
 }
 
 thead.whitelistTableHeader tr th:nth-child(4)
@@ -191,6 +220,7 @@ td {
     padding: 0.5em;
     font-weight: 100;
     vertical-align: top;
+    hyphens: auto;
 }
 
 tr {
